--- a/src/components/popup/popup.module.scss
+++ b/src/components/popup/popup.module.scss
@@ -13,7 +13,7 @@
   }
   
   .modal-content {
-    background: white;
+    background:var(--popup-color);
     padding: 40px;
     border-radius: 15px;
     max-width: 500px;
@@ -28,7 +28,7 @@
   .modal-title {
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: var(--sidebar-main-color);
   }
   
   .modal-description {
@@ -40,11 +40,11 @@
   .form-input,
   .file-input {
     width: 100%;
-    padding: 10px;
+    padding: 14px;
     font-size: 14px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background: #f9f9f9;
+    background: #ececec;
     transition: border-color 0.3s ease;
   }
   
@@ -84,7 +84,7 @@
   @media (max-width: 480px) {
     .submit-btn,
     .cancel-btn {
-      padding: 10px 30px; 
+      padding: 10px 22px; 
       font-size: 12px;
       width: 100%; 
     }
@@ -119,5 +119,8 @@
   .form-label {
     font-size: 14px;
     font-weight: 500;
-    color: #555;
+    color: var(--sidebar-main-color);;
+  }
+  .form-input::placeholder {
+    color: black
   }
