--- a/src/components/products/products.module.scss
+++ b/src/components/products/products.module.scss
@@ -1,7 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
-// * {
-//   box-sizing: border-box;
-// }
 
 .app-container {
   margin: 0;
@@ -21,7 +18,7 @@
 .app-container {
   border-radius: 4px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-height: 100%;
   max-width: 1280px;
   display: flex;
@@ -29,125 +26,6 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   max-width: 2000px;
   margin: 0 auto;
-}
-
-.sidebar {
-  flex-basis: 200px;
-  max-width: 200px;
-  flex-shrink: 0;
-  background-color: var(--sidebar);
-  display: flex;
-  flex-direction: column;
-}
-.sidebar-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px;
-}
-.sidebar-list {
-  list-style-type: none;
-  padding: 0;
-}
-.sidebar-list-item {
-  position: relative;
-  margin-bottom: 4px;
-}
-.sidebar-list-item a {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 10px 16px;
-  color: var(--sidebar-link);
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 24px;
-}
-.sidebar-list-item svg {
-  margin-right: 8px;
-}
-.sidebar-list-item:hover {
-  background-color: var(--sidebar-hover-link);
-}
-.sidebar-list-item.active {
-  background-color: var(--sidebar-active-link);
-}
-.sidebar-list-item.active:before {
-  content: "";
-  position: absolute;
-  right: 0;
-  background-color: #2869ff;
-  height: 100%;
-  width: 4px;
-}
-@media screen and (max-width: 1024px) {
-  .sidebar {
-    /* display: none; */
-  }
-}
-
-.mode-switch {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  color: var(--app-content-main-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  margin-right: 8px;
-  cursor: pointer;
-}
-.mode-switch .moon {
-  fill: var(--app-content-main-color);
-}
-
-.mode-switch.active .moon {
-  fill: none;
-}
-
-.account-info {
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  margin-top: auto;
-}
-.account-info-picture {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  overflow: hidden;
-  flex-shrink: 0;
-}
-.account-info-picture img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.account-info-name {
-  font-size: 14px;
-  color: var(--sidebar-main-color);
-  margin: 0 8px;
-  overflow: hidden;
-  max-width: 100%;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.account-info-more {
-  color: var(--sidebar-main-color);
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  margin-left: auto;
-}
-
-.app-icon {
-  color: var(--sidebar-main-color);
-}
-.app-icon svg {
-  width: 24px;
-  height: 24px;
 }
 
 .app-content {
@@ -158,18 +36,6 @@
   max-height: 100%;
   display: flex;
   flex-direction: column;
-}
-.app-content-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 4px;
-}
-.app-content-headerText {
-  color: var(--app-content-main-color);
-  font-size: 24px;
-  line-height: 32px;
-  margin: 0;
 }
 .app-content-headerButton {
   background-color:#2869ff;
@@ -182,6 +48,7 @@
   padding: 0 16px;
   transition: 0.2s;
   cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 .app-content-headerButton:hover {
   background-color: #6291fd;
@@ -443,6 +310,7 @@
   display: flex;
   align-items: center;
 }
+
 .tableView .sort-button:hover {
   color: #2869ff;
 }
@@ -573,4 +441,11 @@
 }
 .gridView .cell-label {
   opacity: 0.6;
+}
+
+
+@media (max-width: 570px) {
+  .search-bar {
+    max-width: 290px;
+  }
 }
